# stellar-vault

./: .gitignore  README.md  docker-compose.dev.yml  package-lock.json  package.json  value-proposition.md
ai-engine/: main.py  requirements.txt
ai-engine/analytics/: market_analytics.py
ai-engine/compliance/: kyc_aml_service.py
ai-engine/core/: cache.py  config.py  database.py
ai-engine/models/: __init__.py  asset_models.py
ai-engine/risk/: __init__.py  portfolio_optimizer.py  risk_assessor.py
ai-engine/services/: art_valuer.py  bonds_valuer.py  commodities_valuer.py  real_estate_valuer.py  stellar_client.py
ai-engine/utils/: __init__.py  data_sources.py
api/: package.json  tsconfig.json
api/prisma/: schema.prisma
api/src/: index.ts
contracts/: Cargo.toml  rust-toolchain.toml
contracts/asset-token/: Cargo.toml
contracts/asset-token/src/: lib.rs  test.rs
contracts/asset-token/test_snapshots/test/: test_admin_functions.1.json  test_initialize_twice_should_panic.1.json  test_record_transaction.1.json  test_tokenize_commodities_asset.1.json  test_tokenize_real_estate_asset.1.json  test_transfer_ownership.1.json  test_update_compliance_status.1.json  test_update_valuation.1.json  test_validate_empty_name.1.json
frontend/: next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: WalletConnect.tsx
frontend/contexts/: WalletContext.tsx
frontend/lib/: api.ts  stellar  stellar.ts
frontend/stores/: auth-store.ts  stellar-store.ts
(+22 files in other folders)
